tdf#113834: fix crash when service host empty

The crash affects Windows, not Linux where an error popup appears instead (MacOs?)
It seems the fact the url was empty triggers an exception in ucbhelper::Content ctr
So let's put the lines in the try catch and log the exception.
See comments of bugtracker for slight more details.

Change-Id: I60e55be488632ff6e0106fde832a818c6431f58e
Reviewed-on: https://gerrit.libreoffice.org/71321
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>